--- a/src/layout/blogs/styleBlog.css
+++ b/src/layout/blogs/styleBlog.css
@@ -145,4 +145,27 @@
     height: 32px;
     font-size: 13px;
   }
+}
+
+/* Thêm CSS cho tiêu đề danh mục */
+.category-header {
+  margin-bottom: 20px;
+  padding-bottom: 10px;
+  border-bottom: 1px solid #e0e0e0;
+}
+
+.category-header h2 {
+  font-size: 24px;
+  color: #333;
+  position: relative;
+}
+
+.category-header h2:after {
+  content: '';
+  position: absolute;
+  bottom: -10px;
+  left: 0;
+  width: 60px;
+  height: 3px;
+  background-color: #2eb97e;
 } 
