--- a/src/layout/course/Component/Combo/Combo.module.css
+++ b/src/layout/course/Component/Combo/Combo.module.css
@@ -29,7 +29,7 @@
   gap: 20px;
 }
 
-.combo-container.two-column {
+.two-column {
   grid-template-columns: repeat(2, 1fr);
 }
 
@@ -198,7 +198,7 @@
 }
 
 @media (max-width: 768px) {
-  .combo-container.two-column {
+  .two-column {
     grid-template-columns: 1fr;
   }
   
@@ -208,7 +208,7 @@
 }
 
 @media (min-width: 769px) and (max-width: 1024px) {
-  .combo-container.two-column {
+  .two-column {
     grid-template-columns: repeat(2, 1fr);
   }
 } 
